// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dashboard > renders dashboard with tasks after loading (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="min-h-screen bg-gray-100"
  >
    <header
      class="bg-white shadow"
    >
      <div
        class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center"
      >
        <h1
          class="text-xl font-bold text-gray-800"
        >
          Family Todo App
        </h1>
        <div
          class="flex items-center gap-4"
        >
          <span
            class="text-gray-600"
          >
            Hello, Test User
          </span>
          <button
            class="px-3 py-1 text-sm text-gray-600 hover:text-gray-800"
          >
            Logout
          </button>
        </div>
      </div>
    </header>
    <main
      class="max-w-7xl mx-auto px-4 py-6"
    >
      <div
        class="mb-6 flex flex-wrap gap-4 items-center justify-between"
      >
        <div
          class="flex gap-2"
        >
          <button
            class="px-4 py-2 rounded bg-blue-500 text-white"
          >
            Open
          </button>
          <button
            class="px-4 py-2 rounded bg-white text-gray-700 border"
          >
            Completed
          </button>
          <button
            class="px-4 py-2 rounded bg-white text-gray-700 border"
          >
            My Tasks
          </button>
          <button
            class="px-4 py-2 rounded bg-white text-gray-700 border"
          >
            All
          </button>
        </div>
        <div
          class="flex gap-4 items-center"
        >
          <select
            class="px-3 py-2 border rounded bg-white"
          >
            <option
              value="createdAt"
            >
              Sort by Created
            </option>
            <option
              value="dueDate"
            >
              Sort by Due Date
            </option>
          </select>
          <button
            class="px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600"
          >
            + New Task
          </button>
        </div>
      </div>
      <div
        class="space-y-2"
      >
        <div
          class="p-4 border rounded-lg mb-2 bg-white border-gray-200"
        >
          <div
            class="flex items-start justify-between"
          >
            <div
              class="flex-1"
            >
              <h3
                class="font-semibold text-lg text-gray-800"
              >
                Task 1
              </h3>
              <p
                class="text-gray-600 mt-1"
              >
                Desc 1
              </p>
              <div
                class="flex gap-4 mt-2 text-sm text-gray-500"
              >
                <span
                  class="px-2 py-0.5 rounded bg-blue-100 text-blue-800"
                >
                  Test User
                </span>
              </div>
            </div>
            <div
              class="flex gap-2 ml-4"
            >
              <button
                class="px-3 py-1 bg-green-500 text-white rounded hover:bg-green-600 text-sm"
              >
                ✓
              </button>
              <button
                class="px-3 py-1 bg-blue-500 text-white rounded hover:bg-blue-600 text-sm"
              >
                Edit
              </button>
              <button
                class="px-3 py-1 bg-red-500 text-white rounded hover:bg-red-600 text-sm"
              >
                Delete
              </button>
            </div>
          </div>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`Dashboard > renders empty dashboard correctly (snapshot) 1`] = `
<DocumentFragment>
  <div
    class="min-h-screen bg-gray-100"
  >
    <header
      class="bg-white shadow"
    >
      <div
        class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center"
      >
        <h1
          class="text-xl font-bold text-gray-800"
        >
          Family Todo App
        </h1>
        <div
          class="flex items-center gap-4"
        >
          <span
            class="text-gray-600"
          >
            Hello, Test User
          </span>
          <button
            class="px-3 py-1 text-sm text-gray-600 hover:text-gray-800"
          >
            Logout
          </button>
        </div>
      </div>
    </header>
    <main
      class="max-w-7xl mx-auto px-4 py-6"
    >
      <div
        class="mb-6 flex flex-wrap gap-4 items-center justify-between"
      >
        <div
          class="flex gap-2"
        >
          <button
            class="px-4 py-2 rounded bg-blue-500 text-white"
          >
            Open
          </button>
          <button
            class="px-4 py-2 rounded bg-white text-gray-700 border"
          >
            Completed
          </button>
          <button
            class="px-4 py-2 rounded bg-white text-gray-700 border"
          >
            My Tasks
          </button>
          <button
            class="px-4 py-2 rounded bg-white text-gray-700 border"
          >
            All
          </button>
        </div>
        <div
          class="flex gap-4 items-center"
        >
          <select
            class="px-3 py-2 border rounded bg-white"
          >
            <option
              value="createdAt"
            >
              Sort by Created
            </option>
            <option
              value="dueDate"
            >
              Sort by Due Date
            </option>
          </select>
          <button
            class="px-4 py-2 bg-green-500 text-white rounded hover:bg-green-600"
          >
            + New Task
          </button>
        </div>
      </div>
      <div
        class="text-center py-8 text-gray-500"
      >
        No tasks found
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`Dashboard > renders loading state initially 1`] = `
<DocumentFragment>
  <div
    class="min-h-screen flex items-center justify-center bg-gray-100"
  >
    <p
      class="text-gray-600"
    >
      Loading...
    </p>
  </div>
</DocumentFragment>
`;
